--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,6 +3,45 @@
 /// @link http://registry.origami.ft.com/components/o-crossword
 ////
 
+#virtualKeyboard {
+	position: fixed;
+    width: 100%;
+    // height: 150px;
+    background: #333;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+	padding: 1em;
+	box-sizing: border-box;
+
+	.row{
+		// background: red;
+		display: flex;
+		width: 100%;
+		justify-content: space-around;
+		margin-bottom: 1em;
+		max-width: 300px;
+
+		span{
+			background: white;
+			height: 40px;
+			width: 25px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 3px;
+			font-weight: 600;
+			box-shadow: 0 2px 3px black;
+			background-color: white;
+			cursor: pointer;
+		}
+
+	}
+}
+
 @mixin oCrosswordType {
 	font-family: monospace;
 	min-width: 1.5em;
